--- a/css/percircle.css
+++ b/css/percircle.css
@@ -20,6 +20,15 @@
   transform: rotate(0deg);
 }
 
+.bar {
+  -webkit-backface-visibility:hidden;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  -moz-transition: -moz-transform 0.6s ease-in-out;
+  -ms-transition: -ms-transform 0.6s ease-in-out;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
+}
+
 .pie-fill, .gt50 .bar:after, .gt50 .fill {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
