--- a/css/percircle.css
+++ b/css/percircle.css
@@ -1,13 +1,101 @@
-.rect-auto, .c100.gt50 .slice {
+﻿.c100.dark {
+  background-color: #777777;
+}
+.c100.dark .bar,
+.c100.dark .fill {
+  border-color: #c6ff00;
+}
+.c100.dark > span {
+  color: #777777;
+}
+.c100.dark:after {
+  background-color: #555555;
+}
+.c100.dark:hover > span {
+  color: #c6ff00;
+}
+.c100.red .bar,
+.c100.red .fill {
+  border-color: #cc1111;
+}
+.c100.red:hover > span {
+  color: #cc1111;
+}
+.c100.red.dark .bar,
+.c100.red.dark .fill {
+  border-color: #ea1b1b;
+}
+.c100.red.dark:hover > span {
+  color: #ea1b1b;
+}
+.c100.blue .bar,
+.c100.blue .fill {
+  border-color: #00a0bd;
+}
+.c100.blue:hover > span {
+  color: #00a0bd;
+}
+.c100.blue.dark .bar,
+.c100.blue.dark .fill {
+  border-color: #20cceb;
+}
+.c100.blue.dark:hover > span {
+  color: #20cceb;
+}
+.c100.green .bar,
+.c100.green .fill {
+  border-color: #4db53c;
+}
+.c100.green:hover > span {
+  color: #4db53c;
+}
+.c100.green.dark .bar,
+.c100.green.dark .fill {
+  border-color: #5fd400;
+}
+.c100.green.dark:hover > span {
+  color: #5fd400;
+}
+.c100.orange .bar,
+.c100.orange .fill {
+  border-color: #dc5b00;
+}
+.c100.orange:hover > span {
+  color: #dc5b00;
+}
+.c100.orange.dark .bar,
+.c100.orange.dark .fill {
+  border-color: #dc5b00;
+}
+.c100.orange.dark:hover > span {
+  color: #dc5b00;
+}
+.c100.pink .bar,
+.c100.pink .fill {
+  border-color: #ff8e8e;
+}
+.c100.pink:hover > span {
+  color: #ff8e8e;
+}
+.c100.pink.dark .bar,
+.c100.pink.dark .fill {
+  border-color: #ff8e8e;
+}
+.c100.pink.dark:hover > span {
+  color: #ff8e8e;
+}
+.rect-auto,
+.c100.gt50 .slice {
   clip: rect(auto, auto, auto, auto);
 }
-
-.pie, .c100 .bar, .gt50 .fill {
+.pie,
+.c100 .bar,
+.gt50 .fill {
   position: absolute;
   border: 0.08em solid #307bbb;
   width: 0.84em;
   height: 0.84em;
-  clip: rect(0em, 0.5em, 1em, 0em);
+  clip: rect(0, 0.5em, 1em, 0);
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -19,24 +107,25 @@
   -o-transform: rotate(0deg);
   transform: rotate(0deg);
 }
-
 .bar {
-  -webkit-backface-visibility:hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   -webkit-transition: -webkit-transform 0.6s ease-in-out;
   -moz-transition: -moz-transform 0.6s ease-in-out;
   -ms-transition: -ms-transform 0.6s ease-in-out;
   -o-transition: -o-transform 0.6s ease-in-out;
   transition: transform 0.6s ease-in-out;
 }
-
-.pie-fill, .gt50 .bar:after, .gt50 .fill {
+.pie-fill,
+.gt50 .bar:after,
+.gt50 .fill {
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
   -o-transform: rotate(180deg);
   transform: rotate(180deg);
 }
-
 .c100 {
   position: relative;
   font-size: 120px;
@@ -51,7 +140,9 @@
   margin: 0 0.1em 0.1em 0;
   background-color: #cccccc;
 }
-.c100 *, .c100 *:before, .c100 *:after {
+.c100 *,
+.c100 *:before,
+.c100 *:after {
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
@@ -69,27 +160,20 @@
 .c100 > span {
   position: absolute;
   z-index: 1;
-  width:100%;
+  width: 100%;
   top: 50%;
-  height:1em;
+  height: 1em;
   margin-top: -0.5em;
   font-size: 0.2em;
   color: #cccccc;
   display: block;
   text-align: center;
   white-space: nowrap;
-  -webkit-transition-property: all;
-  -moz-transition-property: all;
-  -o-transition-property: all;
-  transition-property: all;
-  -webkit-transition-duration: 0.2s;
-  -moz-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-  -webkit-transition-timing-function: ease-out;
-  -moz-transition-timing-function: ease-out;
-  -o-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  -moz-transition: -moz-transform 0.2s ease-in-out;
+  -ms-transition: -ms-transform 0.2s ease-in-out;
+  -o-transition: -o-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 .c100:after {
   position: absolute;
@@ -102,29 +186,21 @@
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   width: 0.84em;
   height: 0.84em;
-  -webkit-transition-property: all;
-  -moz-transition-property: all;
-  -o-transition-property: all;
-  transition-property: all;
-  -webkit-transition-duration: 0.2s;
-  -moz-transition-duration: 0.2s;
-  -o-transition-duration: 0.2s;
-  transition-duration: 0.2s;
-  -webkit-transition-timing-function: ease-in;
-  -moz-transition-timing-function: ease-in;
-  -o-transition-timing-function: ease-in;
-  transition-timing-function: ease-in;
+  -webkit-transition: -webkit-transform 0.2s ease-in-out;
+  -moz-transition: -moz-transform 0.2s ease-in-out;
+  -ms-transition: -ms-transform 0.2s ease-in-out;
+  -o-transition: -o-transform 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
 }
 .c100 .slice {
   position: absolute;
   width: 1em;
   height: 1em;
-  clip: rect(0em, 1em, 1em, 0.5em);
+  clip: rect(0, 1em, 1em, 0.5em);
 }
-
 .c100:hover {
   cursor: default;
 }
@@ -143,76 +219,4 @@
   -o-transform: scale(1.1);
   transform: scale(1.1);
 }
-.c100.dark {
-  background-color: #777777;
-}
-.c100.dark .bar,
-.c100.dark .fill {
-  border-color: #c6ff00 !important;
-}
-.c100.dark > span {
-  color: #777777;
-}
-.c100.dark:after {
-  background-color: #666666;
-}
-.c100.dark:hover > span {
-  color: #c6ff00;
-}
-.c100.green .bar, .c100.green .fill {
-  border-color: #4db53c !important;
-}
-.c100.green:hover > span {
-  color: #4db53c;
-}
-.c100.green.dark .bar, .c100.green.dark .fill {
-  border-color: #5fd400 !important;
-}
-.c100.green.dark:hover > span {
-  color: #5fd400;
-}
-.c100.orange .bar, .c100.orange .fill {
-  border-color: #dd9d22 !important;
-}
-.c100.orange:hover > span {
-  color: #dd9d22;
-}
-.c100.orange.dark .bar, .c100.orange.dark .fill {
-  border-color: #e08833 !important;
-}
-.c100.orange.dark:hover > span {
-  color: #e08833;
-}
-
-.c100.pink .bar, .c100.pink .fill {
-  border-color: #ff8e8e !important;
-}
-.c100.pink:hover > span {
-  color: #ff8e8e;
-}
-.c100.pink.dark .bar, .c100.pink.dark .fill {
-  border-color: #ff8e8e !important;
-}
-.c100.pink.dark:hover > span {
-  color: #ff8e8e;
-}
-
-.c100.red .bar, .c100.red .fill {
-  border-color: #cc1111 !important;
-}
-.c100.red:hover > span {
-  color: #cc1111;
-}
-.c100.red.dark .bar, .c100.red.dark .fill {
-  border-color: #cc1111 !important;
-}
-.c100.red.dark:hover > span {
-  color: #cc1111;
-}
-
-.dark-area {
-	background-color: #666;
-	padding: 40px;
-	margin: 0 -40px 20px -40px;
-	clear: both;
-}
+/*# sourceMappingURL=percircle.css.map */
