jQuery plugin implementation javascript minified less stylesheets to separate core css and theming

--- a/css/colorthemes.css
+++ b/css/colorthemes.css
@@ -1,87 +1,115 @@
-﻿.c100.dark {
+﻿.percircle.dark {
   background-color: #777777;
 }
-.c100.dark .bar,
-.c100.dark .fill {
+.percircle.dark .bar,
+.percircle.dark .fill {
   border-color: #c6ff00;
 }
-.c100.dark > span {
+.percircle.dark > span {
   color: #777777;
 }
-.c100.dark:after {
+.percircle.dark:after {
   background-color: #555555;
 }
-.c100.dark:hover > span {
+.percircle.dark:hover > span {
   color: #c6ff00;
 }
-.c100.red .bar,
-.c100.red .fill {
-  border-color: #cc1111;
+.percircle.red .bar,
+.percircle.red .fill {
+  border-color: #dd5454;
 }
-.c100.red:hover > span {
-  color: #cc1111;
+.percircle.red:hover > span {
+  color: #dd5454;
 }
-.c100.red.dark .bar,
-.c100.red.dark .fill {
-  border-color: #ea1b1b;
+.percircle.red.dark .bar,
+.percircle.red.dark .fill {
+  border-color: #f84a4a;
 }
-.c100.red.dark:hover > span {
-  color: #ea1b1b;
+.percircle.red.dark:hover > span {
+  color: #f84a4a;
 }
-.c100.blue .bar,
-.c100.blue .fill {
-  border-color: #00a0bd;
+.percircle.blue .bar,
+.percircle.blue .fill {
+  border-color: #82cefa;
 }
-.c100.blue:hover > span {
-  color: #00a0bd;
+.percircle.blue:hover > span {
+  color: #82cefa;
 }
-.c100.blue.dark .bar,
-.c100.blue.dark .fill {
+.percircle.blue.dark .bar,
+.percircle.blue.dark .fill {
   border-color: #20cceb;
 }
-.c100.blue.dark:hover > span {
+.percircle.blue.dark:hover > span {
   color: #20cceb;
 }
-.c100.green .bar,
-.c100.green .fill {
-  border-color: #4db53c;
+.percircle.green .bar,
+.percircle.green .fill {
+  border-color: #8dea7b;
 }
-.c100.green:hover > span {
-  color: #4db53c;
+.percircle.green:hover > span {
+  color: #8dea7b;
 }
-.c100.green.dark .bar,
-.c100.green.dark .fill {
-  border-color: #5fd400;
+.percircle.green.dark .bar,
+.percircle.green.dark .fill {
+  border-color: #a9ff3a;
 }
-.c100.green.dark:hover > span {
-  color: #5fd400;
+.percircle.green.dark:hover > span {
+  color: #a9ff3a;
 }
-.c100.orange .bar,
-.c100.orange .fill {
+.percircle.orange .bar,
+.percircle.orange .fill {
+  border-color: #e88239;
+}
+.percircle.orange:hover > span {
+  color: #e88239;
+}
+.percircle.orange.dark .bar,
+.percircle.orange.dark .fill {
   border-color: #dc5b00;
 }
-.c100.orange:hover > span {
+.percircle.orange.dark:hover > span {
   color: #dc5b00;
 }
-.c100.orange.dark .bar,
-.c100.orange.dark .fill {
-  border-color: #dc5b00;
+.percircle.pink .bar,
+.percircle.pink .fill {
+  border-color: #ff8ed0;
 }
-.c100.orange.dark:hover > span {
-  color: #dc5b00;
+.percircle.pink:hover > span {
+  color: #ff8ed0;
 }
-.c100.pink .bar,
-.c100.pink .fill {
-  border-color: #ff8e8e;
+.percircle.pink.dark .bar,
+.percircle.pink.dark .fill {
+  border-color: #ff58b9;
 }
-.c100.pink:hover > span {
-  color: #ff8e8e;
+.percircle.pink.dark:hover > span {
+  color: #ff58b9;
 }
-.c100.pink.dark .bar,
-.c100.pink.dark .fill {
-  border-color: #ff8e8e;
+.percircle.purple .bar,
+.percircle.purple .fill {
+  border-color: #aa7eff;
 }
-.c100.pink.dark:hover > span {
-  color: #ff8e8e;
+.percircle.purple:hover > span {
+  color: #aa7eff;
+}
+.percircle.purple.dark .bar,
+.percircle.purple.dark .fill {
+  border-color: #7a38f7;
+}
+.percircle.purple.dark:hover > span {
+  color: #7a38f7;
+}
+.percircle.yellow .bar,
+.percircle.yellow .fill {
+  border-color: #dcbd00;
+}
+.percircle.yellow:hover > span {
+  color: #dcbd00;
+}
+.percircle.yellow.dark .bar,
+.percircle.yellow.dark .fill {
+  border-color: #ffdb00;
+}
+.percircle.yellow.dark:hover > span {
+  color: #ffdb00;
 }
 /*# sourceMappingURL=colorthemes.css.map */
