--- a/css/colorthemes.less
+++ b/css/colorthemes.less
@@ -1,4 +1,4 @@
-.c100
+.percircle
 {
     @default-color-dark:#555;
     @default-bar-color-dark: #c6ff00;
@@ -36,24 +36,30 @@
     }
 
     &.red {
-        .colortheme(#cc1111, #ea1b1b);
+        .colortheme(#dd5454, #f84a4a);
     }
 
     &.blue {
-        .colortheme(#00a0bd, #20cceb);
+        .colortheme(#82cefa, #20cceb);
     }
-
-
+    
     &.green {
-        .colortheme(#4db53c, #5fd400);
+        .colortheme(#8dea7b, #a9ff3a);
     }   
         
     &.orange{
-         .colortheme(#dc5b00, #dc5b00);
+         .colortheme(#e88239, #dc5b00);
     }
 
     &.pink {
-        .colortheme(#ff8e8e, #ff8e8e);
+        .colortheme(#ff8ed0, #ff58b9);
     }
-    
+         
+    &.purple {
+        .colortheme(#aa7eff, #7a38f7);
+    }
+         
+    &.yellow{
+         .colortheme(#dcbd00, #ffdb00);
+    }
 }
