--- a/css/percircle.less
+++ b/css/percircle.less
@@ -36,11 +36,11 @@
     transition: transform @timing @function;
 }
 
-.rect-auto, .c100.gt50 .slice {
+.rect-auto, .percircle.gt50 .slice {
     clip: rect(auto, auto, auto, auto);
 }
 
-.pie, .c100 .bar, .gt50 .fill {
+.pie, .percircle .bar, .gt50 .fill {
     position: absolute;
     border: 0.08em solid @default-bar-color;
     width: 0.84em;
@@ -54,14 +54,13 @@
     -moz-backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    .transition-transform(0.6s, ease-in-out)
 }
 
 .pie-fill, .gt50 .bar:after, .gt50 .fill {
     .transform-rotate(180deg)
 }
 
-.c100 {
+.percircle {
     position: relative;
     font-size: 120px;
     width: 1em;
@@ -75,6 +74,15 @@
         -webkit-box-sizing: content-box;
         -moz-box-sizing: content-box;
         box-sizing: content-box;
+    }
+
+    &.animate {
+        & > span, &:after {
+            .transition-transform(0.2s, ease-in-out);
+        }
+        .bar {
+            .transition-transform(0.6s, ease-in-out);
+        }
     }
 
     &.center {
@@ -102,7 +110,6 @@
         display: block;
         text-align: center;
         white-space: nowrap;
-        .transition-transform(0.2s, ease-in-out);
     }
 
     &:after {
@@ -115,7 +122,6 @@
         background-color: @default-fill-color;
         width: 0.84em;
         height: 0.84em;
-        .transition-transform(0.2s, ease-in-out);
     }
 
     & .slice {
@@ -131,7 +137,7 @@
 
     &:hover > span {
         .transform-scale(1.3);
-        color:  @default-bar-color;
+        color: @default-bar-color;
     }
 
     &:hover:after {
