--- a/css/percircle.css
+++ b/css/percircle.css
@@ -1,117 +1,3 @@
-.percircle.dark {
-  background-color: #777777;
-}
-.percircle.dark .bar,
-.percircle.dark .fill {
-  border-color: #c6ff00;
-}
-.percircle.dark > span {
-  color: #777777;
-}
-.percircle.dark:after {
-  background-color: #555555;
-}
-.percircle.dark:hover > span {
-  color: #c6ff00;
-}
-.percircle.red .bar,
-.percircle.red .fill {
-  border-color: #dd5454;
-}
-.percircle.red:hover > span {
-  color: #dd5454;
-}
-.percircle.red.dark .bar,
-.percircle.red.dark .fill {
-  border-color: #f84a4a;
-}
-.percircle.red.dark:hover > span {
-  color: #f84a4a;
-}
-.percircle.blue .bar,
-.percircle.blue .fill {
-  border-color: #82cefa;
-}
-.percircle.blue:hover > span {
-  color: #82cefa;
-}
-.percircle.blue.dark .bar,
-.percircle.blue.dark .fill {
-  border-color: #20cceb;
-}
-.percircle.blue.dark:hover > span {
-  color: #20cceb;
-}
-.percircle.green .bar,
-.percircle.green .fill {
-  border-color: #8dea7b;
-}
-.percircle.green:hover > span {
-  color: #8dea7b;
-}
-.percircle.green.dark .bar,
-.percircle.green.dark .fill {
-  border-color: #a9ff3a;
-}
-.percircle.green.dark:hover > span {
-  color: #a9ff3a;
-}
-.percircle.orange .bar,
-.percircle.orange .fill {
-  border-color: #e88239;
-}
-.percircle.orange:hover > span {
-  color: #e88239;
-}
-.percircle.orange.dark .bar,
-.percircle.orange.dark .fill {
-  border-color: #dc5b00;
-}
-.percircle.orange.dark:hover > span {
-  color: #dc5b00;
-}
-.percircle.pink .bar,
-.percircle.pink .fill {
-  border-color: #ff8ed0;
-}
-.percircle.pink:hover > span {
-  color: #ff8ed0;
-}
-.percircle.pink.dark .bar,
-.percircle.pink.dark .fill {
-  border-color: #ff58b9;
-}
-.percircle.pink.dark:hover > span {
-  color: #ff58b9;
-}
-.percircle.purple .bar,
-.percircle.purple .fill {
-  border-color: #aa7eff;
-}
-.percircle.purple:hover > span {
-  color: #aa7eff;
-}
-.percircle.purple.dark .bar,
-.percircle.purple.dark .fill {
-  border-color: #7a38f7;
-}
-.percircle.purple.dark:hover > span {
-  color: #7a38f7;
-}
-.percircle.yellow .bar,
-.percircle.yellow .fill {
-  border-color: #dcbd00;
-}
-.percircle.yellow:hover > span {
-  color: #dcbd00;
-}
-.percircle.yellow.dark .bar,
-.percircle.yellow.dark .fill {
-  border-color: #ffdb00;
-}
-.percircle.yellow.dark:hover > span {
-  color: #ffdb00;
-}
 .rect-auto,
 .percircle.gt50 .slice {
   clip: rect(auto, auto, auto, auto);
@@ -171,7 +57,7 @@
   box-sizing: content-box;
 }
 .percircle.animate > span,
-.percircle.animate:after {
+.percircle.animate .after {
   -webkit-transition: -webkit-transform 0.2s ease-in-out;
   -moz-transition: -moz-transform 0.2s ease-in-out;
   -ms-transition: -ms-transform 0.2s ease-in-out;
@@ -208,7 +94,7 @@
   text-align: center;
   white-space: nowrap;
 }
-.percircle:after {
+.percircle .after {
   position: absolute;
   top: 0.08em;
   left: 0.08em;
@@ -240,7 +126,7 @@
   transform: scale(1.3);
   color: #307bbb;
 }
-.percircle:hover:after {
+.percircle:hover .after {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   -ms-transform: scale(1.1);
